--- a/EasyExcelDemo/pom.xml
+++ b/EasyExcelDemo/pom.xml
@@ -8,10 +8,10 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <groupId>com.cokepepsi</groupId>
-    <artifactId>AnnotationDemo</artifactId>
+    <artifactId>EasyExcelDemo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>AnnotationDemo</name>
-    <description>AnnotationDemo</description>
+    <name>EasyExcelDemo</name>
+    <description>EasyExcelDemo</description>
     <properties>
         <java.version>8</java.version>
     </properties>
@@ -26,31 +26,26 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
         <dependency>
-            <groupId>javax.inject</groupId>
-            <artifactId>javax.inject</artifactId>
-            <version>1</version>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+            <version>2.2.6</version>
         </dependency>
 
         <dependency>
-            <groupId>c3p0</groupId>
-            <artifactId>c3p0</artifactId>
-            <version>0.9.1.2</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
         </dependency>
 
         <dependency>
-            <groupId>jdbc</groupId>
-            <artifactId>jdbc</artifactId>
-            <version>2.0</version>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
         </dependency>
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-aspects</artifactId>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
         </dependency>
     </dependencies>
 
